<resources>
    <string name="app_name">My Tutor</string>
    <string name="logo">Logo</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="view_password">View Password</string>
    <string name="continue_word">Continue</string>
    <string name="conf_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="add_a_review">Add a review</string>
    <string name="user_image">User Image</string>
    <string name="add_rev_msg">You\'re writing a review for</string>
    <string name="rating">Rating</string>
    <string name="tutors">Tutors</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="no_desc_added">No description added</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="learn_by_asking">Learn by asking</string>
    <string name="write_your_review_here">Write your testimonial here</string>
    <string name="would_recommend">Would you recommend this tutor for queries?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit_review">Submit Review</string>
    <string name="description">Description</string>
    <string name="knows_about">Knows about</string>
    <string name="average_rating">Average Rating</string>
    <string name="recommended_by">Recommended by</string>
    <string name="reviews">Testimonials</string>
    <string name="contact">Contact</string>
    <string name="add_review">Add Review</string>
    <string name="search">Search</string>
    <string name="what_do_you_wish_to_learn">What do you wish to learn?</string>
    <string name="clear_search">Clear Search</string>
    <string name="knows_about_comma">Knows about (Comma separated values)</string>
    <string name="add_desc">Add a description</string>
    <string name="save_details">Save Details</string>
    <string name="add_everything_you_know">Add everything you know</string>
    <string name="review">Review</string>
    <string name="this_review_is_for">This review is for</string>
    <string name="sorry_no_tutors_found">Sorry, No tutors found!</string>
    <string name="by">By</string>
    <string name="no_testimonials_as_of_now">No testimonials as of now</string>
    <string name="the_human_library">The \nHuman Library</string>
    <string name="background">Background</string>
    <string name="edit">edit</string>
    <string name="report_user">Report User</string>
    <string name="deactivate_account">Deactivate Account</string>
</resources>
