<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:icon="@drawable/ic_home"
            android:id="@+id/nav_home"
            android:checked="true"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/menu_bottom">
    <item
        android:icon="@drawable/ic_logout"
        android:id="@+id/nav_logout"
        android:title="@string/logout" />
    </group>
</menu>
