<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReviewActivity"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_a_review"
            android:fontFamily="@font/comfortaa"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/username_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/comfortaa"
        android:textSize="16sp"
        android:text="@string/add_rev_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@id/user_image"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/comfortaa"
        android:textSize="18sp"
        tools:text="Umang Jasani"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_txt"
        app:layout_constraintEnd_toStartOf="@id/user_image"/>

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:transitionName="ImageTransition"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:contentDescription="@string/user_image"
        android:src="@drawable/ic_user"/>

    <TextView
        android:id="@+id/review_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/comfortaa"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image"/>

    <EditText
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/comfortaa"
        android:maxLength="250"
        android:textCursorDrawable="@null"
        android:hint="@string/write_your_review_here"
        android:inputType="textCapSentences"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:paddingEnd="64dp"
        app:layout_constraintTop_toBottomOf="@id/review_txt"/>

    <TextView
        android:id="@+id/review_chars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0/250"
        android:fontFamily="@font/comfortaa"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="@id/review"
        app:layout_constraintBottom_toBottomOf="@id/review" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recommend_txt"
        android:fontFamily="@font/comfortaa"
        android:text="@string/would_recommend"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/review"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recommend_txt"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/yes"/>

        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"
            android:text="@string/no"/>

    </RadioGroup>

    <Button
        android:id="@+id/submit_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/comfortaa"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:text="@string/submit_review"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>

</android.support.constraint.ConstraintLayout>