<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:fontFamily="@font/comfortaa"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="NameTransition"
            tools:text="Umang Jasani" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/user_image"
        android:src="@drawable/ic_user"
        android:transitionName="ImageTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ProgressBar
        android:id="@+id/image_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccentDark"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_pencil"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        android:contentDescription="@string/edit" />

    <TextView
        android:id="@+id/profile_desc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <EditText
        android:id="@+id/profile_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:hint="@string/add_desc"
        android:fontFamily="@font/comfortaa"
        android:textCursorDrawable="@null"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_desc_txt"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/profile_knows_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/comfortaa"
        android:layout_marginTop="16dp"
        android:text="@string/knows_about_comma"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_desc" />

    <EditText
        android:id="@+id/profile_knows"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/add_everything_you_know"
        android:textCursorDrawable="@null"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_knows_txt"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/comfortaa"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save_details"
        android:textColor="@color/colorPrimary"/>

</android.support.constraint.ConstraintLayout>