<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    style="@style/AppTheme"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_magnifying_glass"
        android:paddingTop="12dp"
        android:fontFamily="@font/comfortaa"
        android:drawablePadding="16dp"
        android:textSize="18sp"
        android:hint="@string/what_do_you_wish_to_learn"
        android:textCursorDrawable="@null"
        android:foregroundTint="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text" />

    <ImageButton
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_cancel"
        android:background="@android:color/transparent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@id/search_et"
        app:layout_constraintTop_toTopOf="@id/search_et"
        app:layout_constraintBottom_toBottomOf="@id/search_et"
        android:contentDescription="@string/clear_search" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_et"
        tools:listitem="@layout/tutor_item_list" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/sorry_no_tutors_found"
        android:gravity="center"
        android:textSize="24sp"/>

    <ProgressBar
        android:id="@+id/load_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="160dp"
        android:indeterminate="true"/>

</android.support.constraint.ConstraintLayout>