<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fragment_background"
    android:paddingTop="40dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/hintColors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hintColors"
            android:drawablePadding="12dp"
            android:fontFamily="@font/comfortaa"
            android:paddingBottom="16dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:textColorHint="@color/hintColors"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:backgroundTint="@color/hintColors"
            android:drawablePadding="12dp"
            android:paddingBottom="16dp"
            android:drawableStart="@drawable/ic_key"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/comfortaa"
        android:background="@drawable/button_background"
        android:text="@string/continue_word"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="4dp"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/white"
        android:elevation="24dp"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_constraintBottom_toBottomOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button" />

</android.support.constraint.ConstraintLayout>